--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -30,6 +30,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/board/register.do">
+                        채팅방
+                        <i class="bi bi-chat"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <!--열리는 타겟 - href="#offcanvasSearch" // 버튼 아니고 메뉴인것처럼 nav-link -->
                     <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasSearch" role="button" aria-controls="offcanvasExample">
                         해시태그 검색
