--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,8 +6,9 @@
   <meta charset="UTF-8">
   <title>댓글 게시판</title>
   <link rel="stylesheet" href="/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css">
-  <script src="/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/webjars/bootstrap-icons/1.10.3/font/bootstrap-icons.css"> <!-- 부트스트랩 아이콘 라이브러리 추가 -->
+  <script src="/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/js/Follow.js"></script> <!-- 스크립트가 css 를 쓰는 일이 있어서, 스크립트가 아래에 있는게 좋다 -->
 </head>
 <body>
 
