--- a/src/main/resources/templates/board/tagsinput.html
+++ b/src/main/resources/templates/board/tagsinput.html
@@ -85,7 +85,7 @@
   }
 
   function tagOptComponent(tagObj){
-    return `<option value="${tagObj.tag}">${tagObj.tag} 게시물${tagObj.bCnt}</option>>`;
+    return `<option value="${tagObj.tag}">${tagObj.tag} 게시물${tagObj.bCnt}</option>`;
   }
 
   function appendTag(){
