--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/board/register.do">
+                    <a class="nav-link" href="/chat/room/list.do">
                         채팅방
                         <i class="bi bi-chat"></i>
                     </a>
@@ -103,6 +103,10 @@
         </div>
     </div>
 </div>
+
+
+
+
 <script>
     function tagListComponent(tagObj){ // tagObj : {"tag":"홍대","bCnt":8}
         // html 을 컨포넌트화
@@ -147,7 +151,6 @@
             // 🍒resp.json()은 HTTP 응답 객체에서 JSON 데이터를 추출하여 JavaScript 객체로 변환
         }
     }
-
 
 </script>
 
