--- a/src/main/resources/templates/user/modify.html
+++ b/src/main/resources/templates/user/modify.html
@@ -54,7 +54,7 @@
         </p>
         <p class="form-floating">
             <input type="text" name="address" th:value="${user.address}" class="form-control" placeholder="??">
-            <label>주소</label>정
+            <label>주소</label>
         <p class="form-floating">
             <input type="text" name="detailAddress" th:value="${user.detailAddress}" class="form-control" placeholder="??">
             <label>주소상세</label>
