--- a/src/main/resources/templates/board/loginLikes.html
+++ b/src/main/resources/templates/board/loginLikes.html
@@ -6,10 +6,13 @@
 <!--  필드 this 를 a태그로 정의하겠다. -->
 <!--  좋아요가 한번도 등록이 안된경우 등록이 안된다? bId 가 없어서. boardLikeHandler('LIKE',[[${likes.id}]]) -->
 <!--  #strings.equals(likes.status,'BEST') == likes.status=='BEST'-->
+  <p th:text="${likes}"></p>
   <a href="javascript:void(0)"
      th:onclick="boardLikeHandler('LIKE',[[${id}]])"
      class="btn btn-sm btn-light text-danger" data-bs-toggle="tooltip" data-bs-title="좋아요" data-bs-placement="top">
-<!--    클릭하면 bId 를 받는다.-->
+<!--    a.onclick=함수 (함수의 this==a) -->
+<!--    a.onclick=function() {함수();} ( 함수의 this==window )-->
+    <!--    클릭하면 bId 를 받는다.-->
     <!--    좋아요 버튼이니까, 좋아요의 상태를 담는다.-->
     <!--    javascript:void(0) : 자바스크립트 동작을 막는다.-->
     <i class="bi fs-4" th:classappend="${#strings.equals(likes.status,'LIKE')?'bi-emoji-heart-eyes-fill':'bi-emoji-heart-eyes' }"></i> <!-- bi : bootstrap icon -->
